# PAP-projet

./: README.md  info.txt  meson.build
doc/: Doxyfile
doc/doc/html/: annotated.html  classCouleur-members.html  classCouleur.html  classPave3D-members.html  classPave3D.html  classPoint2D-members.html  classPoint2D.html  classPoint3D-members.html  classPoint3D.html  classQuad3D-members.html  classQuad3D.html  classRenderer-members.html  classRenderer.html  classSphere3D-members.html  classSphere3D.html  classTriangle2D-members.html  classTriangle2D.html  classTriangle3D-members.html  classTriangle3D.html  classes.html  couleur_8h.html  couleur_8h__dep__incl.dot  couleur_8h__incl.dot  couleur_8h_source.html  dir_405fd32de3649961a5f009c7a3fe84df.html  dir_405fd32de3649961a5f009c7a3fe84df_dep.dot  dir_40988668acd171a89cddbb9743a487a4.html  dir_40988668acd171a89cddbb9743a487a4_dep.dot  dir_68267d1309a1af8e8297ef4c3efbcdba.html  (+15 more)
src/: couleur.cpp  couleur.h  main.cpp  main_pave3d.cpp  main_quad3d.cpp  main_triangle2d.cpp  main_triangle3d.cpp  pave3d_test  prog  quad3d_test  triangle2d_test  triangle3d_test
src/geometry/: geometry_utils.h  main  main_pave3d.cpp  main_point2d.cpp  main_point3d.cpp  main_quad3d.cpp  main_sphere3d.cpp  main_triangle2d.cpp  main_triangle3d.cpp  pave3d.cpp  pave3d.h  point2d.cpp  point2d.h  point3d.cpp  point3d.h  quad3d.cpp  quad3d.h  sphere3d.cpp  sphere3d.h  triangle2d.cpp  triangle2d.h  triangle3d.cpp  triangle3d.h  vecteur.cpp  vecteur.h
src/scene/: main  main_scene3d.cpp  scene3d.cpp  scene3d.h
src/sdl/: renderer.cpp  renderer.h
(+47 files in other folders)
